# linux-sys-prog

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  build.sh
src/00_playground/: main.c
src/01_template/: main.c
src/02_File_IO/: main.c
src/03_select/: main.c
src/04_poll/: main.c
src/05_wait/: main.c
src/06_buffered_IO/: main.c
src/07_clearerr/: main.c
src/08_endianess/: main.c
src/09_bitwise_ops/: main.c
